# PodcastForge-AI

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUALITY_README.md  QUALITY_TEST_REPORT.md  README.md  SETUP.md  STRUCTURE.txt  coverage.xml  docker-compose.yml  pyproject.toml  requirements-audio.txt  requirements-tts.txt  requirements.txt  run_editor.py  setup.py  setup.sh
.github/: indroduction
.github/workflows/: ci.yml
.venv311/: pyvenv.cfg
.venv311/Scripts/: activate  activate.bat
docs/: ARCHITECTURE.md  DOCUMENTATION_CONSOLIDATION_SUMMARY.md  DOCUMENTATION_GAPS.md  EBOOK_INTEGRATION_GUIDE.md  EDITOR_GUIDE.md  INTEGRATIONS_EBOOK2AUDIOBOOK.md  NEW_FEATURES.md  QUALITY_CHECKS.md  README.md  ROADMAP.md  TODO_CONSOLIDATED.md  UI_UX.md  VOICE_INTEGRATION.md  todo.md
docs/guides/: audio-processing.md  cli-reference.md  engine-management.md  eventbus.md  multitrack-guide.md  script_schema_and_uiux.md  threadmanager.md  timeline-guide.md  tts-engines.md  voice-cloning.md
docs/guides/integrations/: script_orchestrator.md
examples/: demo.py  ebook2audiobook_demo.py  ebook_to_podcast_demo.py  import_project.py  sample_script.json  script_preview.py  tech_podcast.py  tmp_script.json  voice_library_demo.py
examples/projects/: README.md  educational_example.yaml  interview_example.yaml  news_example.json  simple_example.txt
examples/projects/ai_tts_podcast/: README.md  bark_test.py  manifest.yaml  render_project.py  script.json
projects/: example_podcast_project.yaml
scripts/: README.md  _test_imports.py  append_test.py  check_quality.sh  check_wavs.py  cleanup_bark_cache.py  convert_audio.py  debug_bark_preload.py  debug_synth.py  download_models.py  fake_progress_smoke.py  find_libiomp.ps1  fix_quality.sh  generate_breaths.py  generate_example_irs.py  import_check.py  import_ebook2audiobook.sh  inspect_mp4.py  install_ffmpeg.py  install_piper_assets.py  parallel_runs.py  run_bark_sample.py  run_example_project.py  run_tk_player.py  setup_dev.sh  smoke_cancel_test.py  spatialize.py  spatialize_batch.py  spatialize_test_config.json  test_bark_load.py  torch_quick_check.py  torch_test.py
src/podcastforge/: __init__.py  cli.py
src/podcastforge/audio/: __init__.py  ffmpeg_pipe.py  player.py  postprocessor.py  tk_player.py  waveform.py
src/podcastforge/audio/postprocessors/: __init__.py  breaths.py
src/podcastforge/core/: __init__.py  config.py  events.py  forge.py  script_model.py  settings.py
src/podcastforge/gui/: __init__.py  components.py  editor.py  main_window.py  multitrack.py  settings_dialog.py  threading_base.py  timeline.py
src/podcastforge/integrations/: __init__.py  script_orchestrator.py
src/podcastforge/llm/: __init__.py  ollama_client.py
src/podcastforge/parsers/: __init__.py
src/podcastforge/tts/: __init__.py  ebook2audiobook_adapter.py  engine_manager.py  prosody_adapters.py
src/podcastforge/utils/: __init__.py
src/podcastforge/voices/: __init__.py  cloner.py  library.py  manager.py
tests/: __init__.py  run_simple_tests.py  test_audio.py  test_audio_breaths.py  test_audio_ffmpeg_pipe.py  test_audio_postprocessor.py  test_audio_waveform.py  test_core_config.py  test_core_events.py  test_core_script_model.py  test_core_settings.py  test_core_settings_extended.py  test_ebook2audiobook_adapter.py  test_ebook_adapter_extended.py  test_engine_manager_extended.py  test_integrations_orchestrator.py  test_llm_client_extended.py  test_llm_ollama_client.py  test_new_features.py  test_orchestrator.py  test_orchestrator_extended.py  test_prosody_adapters_extended.py  test_prosody_and_breaths.py  test_tts_engine_manager.py  test_voices_cloner.py  test_voices_library.py  test_voices_library_extended.py  test_voices_manager.py  test_voices_manager_extended.py
tests/e2e/: test_synthesize_preview_e2e.py
